[gd_scene load_steps=16 format=2]

[ext_resource path="res://UI/HUD.gd" type="Script" id=1]
[ext_resource path="res://Assets/Art/blackout.png" type="Texture" id=2]
[ext_resource path="res://Assets/Art/cheese.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Art/textbox.png" type="Texture" id=5]
[ext_resource path="res://Assets/Fonts/orange kid.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 6 )

[sub_resource type="InputEventAction" id=8]
action = "ui_accept"

[sub_resource type="ShortCut" id=9]
shortcut = SubResource( 8 )

[sub_resource type="InputEventAction" id=3]
action = "ui_accept"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="InputEventAction" id=6]
action = "ui_accept"

[sub_resource type="ShortCut" id=7]
shortcut = SubResource( 6 )

[node name="HUD" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="blackout" type="TextureRect" parent="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 7

[node name="Top" type="VBoxContainer" parent="Control"]
anchor_right = 1.0

[node name="TopBar" type="HBoxContainer" parent="Control/Top"]
margin_right = 1024.0
margin_bottom = 100.0
alignment = 2

[node name="PauseButton" type="TextureButton" parent="Control/Top/TopBar"]
margin_left = 820.0
margin_right = 920.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 3 )
expand = true

[node name="Countdown" type="Label" parent="Control/Top/TopBar"]
margin_left = 924.0
margin_right = 1024.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
custom_fonts/font = SubResource( 1 )
text = "000"
align = 2

[node name="Bottom" type="VBoxContainer" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_right = -10.0
margin_bottom = 5.0
rect_scale = Vector2( 1.00312, -47.8319 )

[node name="MessageBG" type="TextureRect" parent="Control/Bottom"]
margin_right = 1004.0
margin_bottom = 5.0
rect_min_size = Vector2( 0, 5 )
texture = ExtResource( 5 )
expand = true

[node name="Message" type="Label" parent="Control/Bottom/MessageBG"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 78.0
margin_top = -1.0
margin_right = -734.0
margin_bottom = 42.0
rect_scale = Vector2( 4.30753, -0.0862861 )
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Pausing...
"
autowrap = true

[node name="NextButton" type="TextureButton" parent="Control/Bottom/MessageBG"]
visible = false
margin_left = 890.867
margin_top = 2.27498
margin_right = 930.867
margin_bottom = 42.275
rect_scale = Vector2( 2.36583, -0.045939 )
shortcut = SubResource( 9 )
texture_normal = ExtResource( 3 )
expand = true

[node name="Middle" type="VBoxContainer" parent="Control"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 339.548
margin_top = -146.04
margin_right = 339.548
margin_bottom = -76.0404
rect_scale = Vector2( 0.350755, 2.21703 )

[node name="Restart" type="TextureButton" parent="Control/Middle"]
margin_right = 1024.0
margin_bottom = 70.0
rect_min_size = Vector2( 10, 70 )
shortcut = SubResource( 4 )
texture_normal = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="Control/Middle/Restart"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -393.0
margin_top = -22.0
margin_right = -338.0
margin_bottom = 21.0
rect_scale = Vector2( 14.3468, 1.85728 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "RESTART
"
align = 1
uppercase = true

[node name="Middle2" type="VBoxContainer" parent="Control"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 339.548
margin_top = -146.04
margin_right = 339.548
margin_bottom = -76.04
rect_scale = Vector2( 0.350755, 2.21703 )

[node name="Start" type="TextureButton" parent="Control/Middle2"]
margin_right = 1024.0
margin_bottom = 70.0
rect_min_size = Vector2( 10, 70 )
shortcut = SubResource( 7 )
texture_normal = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="Control/Middle2/Start"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -393.0
margin_top = -22.0
margin_right = -338.0
margin_bottom = 21.0
rect_scale = Vector2( 14.3468, 1.85728 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "START
"
align = 1
uppercase = true

[connection signal="restart" from="." to="." method="_on_HUD_restart"]
[connection signal="pressed" from="Control/Top/TopBar/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="Control/Middle/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Control/Middle2/Start" to="." method="_on_Start_pressed"]
